Changed html filenames so that urls look clean

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Services By Aarushee Solar</title>
+<title>About Aarushee Solar</title>
 <meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
@@ -23,9 +23,7 @@
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
 <link rel="icon" type="image/png" href="favicon/favicon-16x16.jpg" sizes="16x16">
 <link rel="icon" type="image/png" href="favicon/favicon-32x32.jpg" sizes="32x32">
-<meta name="msapplication-TileColor" content="#da532c">
-<link rel="stylesheet" href="css/style-min.css">
-<!--[if lt IE 9]>
+<meta name="msapplication-TileColor" content="#da532c"><link rel="stylesheet" href="css/style-min.css"><!--[if lt IE 9]>
 <script src="js/html5shiv.min.js"></script>
 <script src="js/respond.min.js"></script>
 <![endif]-->
@@ -49,8 +47,7 @@
 </ul>
 </div>
 </div>
-</section> <!--Top Strip-->
-<header class="row">
+</section> <!--Top Strip--><header class="row">
 <div class="container">
 <div class="row">
 <div class="logo col-sm-6">
@@ -70,8 +67,7 @@
 </div>
 </div>
 </div>
-</header> <!--Header-->
-<nav class="navbar navbar-default navbar-static-top">
+</header> <!--Header--><nav class="navbar navbar-default navbar-static-top">
 <div class="container-fluid container">
 <div class="row m04m">
 <div class="navbar-header">
@@ -87,165 +83,130 @@
 <div class="collapse navbar-collapse" id="main_nav">
 <ul class="nav navbar-nav">
 <li><a href="/">Home</a></li>
-<li><a href="aboutUs.html">About us</a></li>
+<li class="active"><a href="aboutUs.html">About us</a></li>
 <li><a href="roofTop.html">Roof-top</a></li>
 <li><a href="groundMount.html">Ground-mount</a></li>
-<li class="active"><a href="services.html">services</a></li>
+<li><a href="services.html">services</a></li>
 <li><a href="products.html">products</a></li>
 <li><a href="contact.html">contact</a></li>
 </ul>
 </div>
 </div>
 </div>
-</nav> <!--Main Nav-->
-<section id="pageCover" class="row servicePage">
-<div class="row pageTitle">Services</div></section>
-<section id="services" class="row">
+</nav> <!--Main Nav--><section id="pageCover" class="row aboutUs">
+<div class="row pageTitle">About us</div>
+</section><section id="aboutus" class="row">
 <div class="container">
 <div class="row">
-<div class="col-sm-9" style="width:100%">
-<div class="row">
-<div class="row m0 whyUs">
-<div class="col-sm-12">
-<div class="row m0 whyUsInner">
-<div class="col-sm-7" style="width:100%;">
-<h3>Why Choose Aarushee <i class="fa fa-question"></i></h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give unbiased solution for solar system requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give customized solution based on requirements as well as budget.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give you the best and customized deals based on your requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e have brand associations with many multinational companies. They are the best in the industry.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e offer very good service backup all over the India to ensure good after sales service.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e can take up projects all over India.
-</li>
-</ul>
+<div class="col-sm-9" style="width:100%;">
+<div class="row aboutContent">
+<div class="row aboutUsTexts m0 member">
+<div class="fleft textsPart">
+<h2>About us</h2>
+<p><b style="font-size: x-large;color: #009100;">A</b>ARUSHEE Solar Energy LLP is a leading vertically integrated solution provider of photovoltaic (PV) products. AARUSHEE Solar manufacturing Solar Home Lightning systems, Solar Street light, solar water pump, charge controller unit and providing rooftop solar solutions for both on-grid and off-grid systems. AARUSHEE Solar has manufacturing facilities in Ratnagiri and Mumbai.<br /><br />In February, 2014, AARUSHEE Solar was registered in Mumbai. The company continued to expand new market through its high-performance and economical solutions. Our company keeps on its research and development of high-efficient products to proceed forward in the difficult situation.<br /><br />AARUSHEE Solar’s target is to be a leading enterprise in PV industry with key products and solutions. In the next 5 years, AARUSHEE Solar is transferred from “PV technology enterprise” into “new energy technology group”. The future of AARUSHEE Solar is to be a world class new energy leading enterprise with top brand reputation, top operation capability, top R&D capability and top industrial development ability.
+</p>
 </div>
-<div class="col-sm-5">
-<ul class="list-inline tagFeatures" style="display:none">
-<li><span class="badge"><i class="fa fa-check"></i></span> fuly responsive</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> semantic and clean html/css</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> woocommerce support</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> custom widgets</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> +600 google fonts</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> ajax contact form</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> layered psd's</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> comming soon page</li>
-</ul>
+<div class="fleft aboutImg" style="padding-top:30px;padding-left:10px;">
+<img src="images/team/about-us.jpg" alt="" style="height:300px;">
 </div>
 </div>
-</div>
-</div>
-<div class="row m0 whatOffer">
-<div class="col-sm-12">
-<div class="row m0 whatOfferInner">
-<h3>What we offer</h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>ystem design and complete EPCM(Engineering, Procurement, Consultation & Management).
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>upply of all project related material.(such as PV modules, invertors, structures, etc.)
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">C</b>ivil activities which shall consists of module foundation and cable conduit construction.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">I</b>nstallation and commissioning of all electrical components.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">P</b>roject planning and controlling.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">A</b>ll technical support and documentation required for statutory and regulatory approvals will be supported by Aarushee Solar Energy.
-</li>
-</ul>
-</div>
-</div>
-</div>
+<!--<div class="row m0 members">
+<h2 style="font-weight:bold;">Our Team</h2>
+<div class="col-sm-4 member3_1 member">
 <div class="row m0">
-<div class="col-sm-12">
-<div class="row m0 serviceFeature">
-<div class="col-sm-4">
-<img src="images/monitor.jpg" alt="" class="monitor img-reponsive">
+<div class="row m0 memImg">
+<img src="images/team/mem1.png" alt="">
 </div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-area-chart"></i>
-</div>
-<div class="media-body">
-<h5>On-Site Consultation</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll help you to select the power system that suits your reuirements.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-book"></i>
-</div>
-<div class="media-body">
-<h5>Trusted Advice</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll advice you & submit necessary approval documentation on your behalf.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-clock-o"></i>
-</div>
-<div class="media-body">
-<h5>Quick Turn-Around</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>nce acquired necessary components, start enjoying your new Solar system.</p>
-</div>
-</div>
-</div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-arrows-alt"></i>
-</div>
-<div class="media-body">
-<h5>Flexibility</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll access your electricity usage & see where you stand to gain the most benfit.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-briefcase"></i>
-</div>
-<div class="media-body">
-<h5>Budgeting</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll taylor our recommendation to your wallet, without cutting service & quality.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-star"></i>
-</div>
-<div class="media-body">
-<h5>International Standards</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>ur Solar components meet German standards guarenteed for 25 years or more.</p>
+<div class="row m0 memberIntro">
+<div class="row m0 name">John Smith</div>
+<div class="row m0 pro">Chief Executive Officer</div>
+<div class="row m0">
+<ul class="list-inline memberSocial">
+<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+</ul>
 </div>
 </div>
 </div>
 </div>
+<div class="col-sm-4 member3_1 member">
+<div class="row m0">
+<div class="row m0 memImg">
+<img src="images/team/mem2.png" alt="">
+</div>
+<div class="row m0 memberIntro">
+<div class="row m0 name">Ardian Bold</div>
+<div class="row m0 pro">Architect</div>
+<div class="row m0">
+<ul class="list-inline memberSocial">
+<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+</ul>
 </div>
 </div>
 </div>
 </div>
-</div>            
+<div class="col-sm-4 member3_1 member">
+<div class="row m0">
+<div class="row m0 memImg">
+<img src="images/team/mem3.png" alt="">
 </div>
-</section>
-<footer id="nr_footer" class="row">
+<div class="row m0 memberIntro">
+<div class="row m0 name">William Mayer</div>
+<div class="row m0 pro">Finance Manager</div>
+<div class="row m0">
+<ul class="list-inline memberSocial">
+<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+</div>-->
+<div class="row m0 members">
+<div class="row member m0">
+<div class="row m0">
+<div class="textsPart" style="margin-bottom:25px;width:calc(100% - 14px);">
+<h3>Vision</h3>
+<p><b style="font-size: x-large;color: #009100;">C</b>hange the way we generate and use electricity, optimize energy portfolio, take responsibility of enable a sustainable future by delivering the cleanest, most efficient and economic solar energy solutions.</p>
+</div>
+<div class="textsPart" style="margin-bottom:25px;width:calc(100% - 14px);">
+<h3>Mission</h3>
+<p><b style="font-size: x-large;color: #009100;">P</b>rovide one-stop solution of clean energy and become industry leader.</p>
+</div>
+<div class="textsPart" style="margin-bottom:25px;width:calc(100% - 14px);">
+<h3>Core Values</h3>
+<p><b style="font-size: x-large;color: #009100;">E</b>quality and Justice, Commitment and Accountability</p>
+</div>
+<div class="textsPart" style="margin-bottom:25px;width:calc(100% - 14px);">
+<h3>Equality & Justice</h3>
+<p><b style="font-size: x-large;color: #009100;">W</b>e treat our customers, suppliers, employees fairly and also want to be treated in the same way. We aim to create a non-biased workplace. With vendors, we maintain an objective, consistent, and impartial attitude. When selecting new employees, we place emphasis on the candidates' qualifications and character, not connections. Be honest, fair and trustworthy in all activities and relationships.</p>
+</div>
+<div class="textsPart" style="margin-bottom:25px;width:calc(100% - 14px);">
+<h3>Commitment</h3>
+<p><b style="font-size: x-large;color: #009100;">W</b>e do not make commitments lightly. Once we make a commitment, we devote ourselves completely to meeting that commitment. At AARUSHEE SOLAR, customers come first. Their success is our success, and we value their ability to compete as we value our own.</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="row partnersSlide">
+<h2>Partners</h2>
+<div class="owl-carousel partnerSlider">
+<div class="item"><img src="images/bajaj_logo.png" alt="" style="padding:20px !important;"></div>
+<div class="item"><img src="images/sma_logo.jpg" alt="" style="padding:24px !important;"></div>
+<div class="item"><img src="images/rec_logo.jpg" alt="" style="padding:28px !important;"></div>
+<div class="item"><img src="images/tata_power_solar_logo.jpg" alt="" style="padding:32px !important;"></div>
+<div class="item"><img src="images/susten_logo.jpg" alt="" style="padding:36px !important;"></div>
+</div>
+</div>
+</div></div>            
+</div>
+</section><footer id="nr_footer" class="row">
 <div class="container">
 <div class="row goTop">
 <a href="#top"><i class="fa fa-angle-up"></i></a>
@@ -289,8 +250,7 @@ Sun cares you, Solar saves you.
 </div>                        
 </div>
 </div>
-<div class="col-sm-6 widget">
-</div>
+<div class="col-sm-6 widget"></div>
 </div>
 <div class="row copyrightRow">
 &copy;
@@ -300,8 +260,7 @@ Sun cares you, Solar saves you.
 <a href="#">Aarushee Solar</a>, All Rights Reserved
 </div>
 </div>
-</footer>
-<script src="js/script-min.js"></script>
+</footer><script src="js/script-min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126263011-1"></script>
 <script>
