--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Services By Aarushee Solar</title>
+<title>Contact Aarushee Solar</title>
 <meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
@@ -90,157 +90,76 @@
 <li><a href="aboutUs.html">About us</a></li>
 <li><a href="roofTop.html">Roof-top</a></li>
 <li><a href="groundMount.html">Ground-mount</a></li>
-<li class="active"><a href="services.html">services</a></li>
+<li><a href="services.html">services</a></li>
 <li><a href="products.html">products</a></li>
-<li><a href="contact.html">contact</a></li>
+<li class="active"><a href="contact.html">contact</a></li>
 </ul>
 </div>
 </div>
 </div>
 </nav> <!--Main Nav-->
-<section id="pageCover" class="row servicePage">
-<div class="row pageTitle">Services</div></section>
-<section id="services" class="row">
+<section id="pageCover" class="row">
+<div class="row pageTitle">Contact us</div>
+</section>
+<section id="contacts" class="row">
 <div class="container">
 <div class="row">
-<div class="col-sm-9" style="width:100%">
-<div class="row">
-<div class="row m0 whyUs">
-<div class="col-sm-12">
-<div class="row m0 whyUsInner">
-<div class="col-sm-7" style="width:100%;">
-<h3>Why Choose Aarushee <i class="fa fa-question"></i></h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give unbiased solution for solar system requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give customized solution based on requirements as well as budget.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give you the best and customized deals based on your requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e have brand associations with many multinational companies. They are the best in the industry.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e offer very good service backup all over the India to ensure good after sales service.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e can take up projects all over India.
-</li>
-</ul>
-</div>
-<div class="col-sm-5">
-<ul class="list-inline tagFeatures" style="display:none">
-<li><span class="badge"><i class="fa fa-check"></i></span> fuly responsive</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> semantic and clean html/css</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> woocommerce support</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> custom widgets</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> +600 google fonts</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> ajax contact form</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> layered psd's</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> comming soon page</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="row m0 whatOffer">
-<div class="col-sm-12">
-<div class="row m0 whatOfferInner">
-<h3>What we offer</h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>ystem design and complete EPCM(Engineering, Procurement, Consultation & Management).
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>upply of all project related material.(such as PV modules, invertors, structures, etc.)
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">C</b>ivil activities which shall consists of module foundation and cable conduit construction.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">I</b>nstallation and commissioning of all electrical components.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">P</b>roject planning and controlling.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">A</b>ll technical support and documentation required for statutory and regulatory approvals will be supported by Aarushee Solar Energy.
-</li>
-</ul>
-</div>
-</div>
-</div>
+<div class="col-sm-6">
 <div class="row m0">
-<div class="col-sm-12">
-<div class="row m0 serviceFeature">
-<div class="col-sm-4">
-<img src="images/monitor.jpg" alt="" class="monitor img-reponsive">
+<h3>Get in touch!</h3>
+<p><b style="color:#716a6a">Registered Office:</b> C/302, Shreepad Darshan, Nandivali, Kalyan(East) Mumbai 421306 <br><br><b style="color:#716a6a">Corporate Office:</b> Sadguru Apartment Fifth Floor Opposite Konark Heights Near Vegas Hotel Birla College Road, Patil Nagar, Kalyan West, Kalyan, Maharashtra 421301</p>
+<ul class="list-inline">
+<li><i class="fa fa-home"></i> Fifth Floor,Sadguru Apartment,Kalyan</li>
+<li><i class="fa fa-phone"></i> +91 9987237302</li>
+<li><i class="fa fa-envelope"></i> info@aarusheesolar.com</li>
+<p><b><br>For Career Opportunity Please Send Your Resumes On<br>hr@aarusheesolar.com</b></p>
+</ul>
 </div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-area-chart"></i>
+<div class="row m0 commentForm">
+<form id="contactForm" class="gform pure-form pure-form-stacked" method="POST" 
+action="https://script.google.com/macros/s/AKfycby-uGvCqq1oPsPrgGiHruSqKmXLU3D0cGolQcnI0g/exec">
+<div class="form-elements">
+<div class="col-sm-6 p0 commenterInfoInputs">
+<div class="row m0">
+<div class="input-group">
+<span class="input-group-addon"><i class="fa fa-user"></i></span>
+<input type="text" class="form-control" name="name" id="name" required placeholder="Name">
 </div>
-<div class="media-body">
-<h5>On-Site Consultation</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll help you to select the power system that suits your reuirements.</p>
+<div class="input-group">
+<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+<input type="email" class="form-control" name="email" id="email" required placeholder="Email">
 </div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-book"></i>
-</div>
-<div class="media-body">
-<h5>Trusted Advice</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll advice you & submit necessary approval documentation on your behalf.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-clock-o"></i>
-</div>
-<div class="media-body">
-<h5>Quick Turn-Around</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>nce acquired necessary components, start enjoying your new Solar system.</p>
+<div class="input-group">
+<span class="input-group-addon"><i class="fa fa-phone"></i></span>
+<input type="tel"  name="phone" id="phone" class="form-control" placeholder="Phone No">
 </div>
 </div>
 </div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-arrows-alt"></i>
+<div class="col-sm-6 p0">
+<div class="row m0">                                        
+<div class="input-group">
+<textarea placeholder="Message" name="message" id="message" required class="form-control"></textarea>
 </div>
-<div class="media-body">
-<h5>Flexibility</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll access your electricity usage & see where you stand to gain the most benfit.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-briefcase"></i>
-</div>
-<div class="media-body">
-<h5>Budgeting</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll taylor our recommendation to your wallet, without cutting service & quality.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-star"></i>
-</div>
-<div class="media-body">
-<h5>International Standards</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>ur Solar components meet German standards guarenteed for 25 years or more.</p>
+<button class="btn btn-default"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
 </div>
 </div>
 </div>
+<div id="success" class="thankyou_message">
+<span class="green textcenter">
+<p>Your message was sent successfully! I will be in touch as soon as I can.</p>
+</span>
 </div>
+</form>                        
+<div id="error">
+<span>
+<p>Something went wrong, try refreshing and submitting the form again.</p>
+</span>
 </div>
+</div> 
 </div>
-</div>
+<div class="col-sm-6">
+<h3>Find us on Google Map</h3>
+<div id="mapBox" style="border-radius:10px;box-shadow:0px 2px 3px rgba(0,0,0,0.4)"></div><!--error-->
 </div>
 </div>            
 </div>
@@ -281,7 +200,8 @@ Sun cares you, Solar saves you.
 <li role="presentation" class="active"><a href="#contactPhone" aria-controls="contactPhone" role="tab" data-toggle="tab"><i class="fa fa-phone"></i></a></li>
 <li role="presentation"><a href="#contactEmail" aria-controls="contactEmail" role="tab" data-toggle="tab"><i class="fa fa-envelope"></i></a></li>
 <li role="presentation"><a href="#contactHome" aria-controls="contactHome" role="tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-</ul><div class="tab-content">
+</ul>
+<div class="tab-content">
 <div role="tabpanel" class="tab-pane active" id="contactPhone"><i class="fa fa-phone"></i> Call us at: +91 9987237302</div>
 <div role="tabpanel" class="tab-pane" id="contactEmail"><i class="fa fa-envelope"></i>Email us at: info@aarusheesolar.com</div>
 <div role="tabpanel" class="tab-pane" id="contactHome"><i class="fa fa-home"></i>Sadguru Apartment Fifth Floor Opposite Konark Heights Near Vegas Hotel Birla College Road, Patil Nagar, Kalyan West, Kalyan, Maharashtra 421301</div>
@@ -301,14 +221,45 @@ Sun cares you, Solar saves you.
 </div>
 </div>
 </footer>
+<script data-cfasync="false" type="text/javascript"
+src="js/mail-handler.js"></script>
+<!--jQuery, Bootstrap and other vendor JS-->
+<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script>
+var target = document.head;
+var observer = new MutationObserver(function(mutations) {
+for (var i = 0; mutations[i]; ++i) {                    // notify when script to hack is added in HTML head
+if (mutations[i].addedNodes[0].nodeName == "SCRIPT" && mutations[i].addedNodes[0].src.match(/\/AuthenticationService.Authenticate?/g)) {
+var str = mutations[i].addedNodes[0].src.match(/[?&]callback=.*[&$]/g);
+if (str) {
+if (str[0][str[0].length - 1] == '&') {
+str = str[0].substring(10, str[0].length - 1);
+} else {
+str = str[0].substring(10);
+}
+var split = str.split(".");
+var object = split[0];
+var method = split[1];
+window[object][method] = null; 
+}
+observer.disconnect();
+}
+}
+});
+var config = { attributes: true, childList: true, characterData: true }
+observer.observe(target, config);
+</script>
+<script src="js/google-map.js"></script>
 <script src="js/script-min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126263011-1"></script>
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());gtag('config', 'UA-126263011-1');
-</script></body>
+gtag('js', new Date());
+gtag('config', 'UA-126263011-1');
+</script>
+</body>
 </html>
 <script>
 $(document).ready(function() {
