--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 </div>
 <div class="collapse navbar-collapse" id="main_nav">
 <ul class="nav navbar-nav">
-<li class="active "><a href="/">Home</a></li><li><a href="about-us2.html">About us</a></li><li><a href="projects2.html">Roof-top</a></li>
-<li><a href="projects3.html">Ground-mount</a></li>
+<li class="active "><a href="/">Home</a></li><li><a href="aboutUs.html">About us</a></li><li><a href="roofTop.html">Roof-top</a></li>
+<li><a href="groundMount.html">Ground-mount</a></li>
 <li><a href="services.html">services</a></li>
-<li><a href="blog2.html">products</a></li><li><a href="contact2.html">contact</a></li></ul>
+<li><a href="products.html">products</a></li><li><a href="contact.html">contact</a></li></ul>
 </div>
 </div>
 </div>
