--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Services By Aarushee Solar</title>
+<title>Products By Aarushee Solar</title>
 <meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
@@ -90,155 +90,144 @@
 <li><a href="aboutUs.html">About us</a></li>
 <li><a href="roofTop.html">Roof-top</a></li>
 <li><a href="groundMount.html">Ground-mount</a></li>
-<li class="active"><a href="services.html">services</a></li>
-<li><a href="products.html">products</a></li>
+<li><a href="services.html">services</a></li>
+<li class="active"><a href="products.html">products</a></li>
 <li><a href="contact.html">contact</a></li>
 </ul>
 </div>
 </div>
 </div>
 </nav> <!--Main Nav-->
-<section id="pageCover" class="row servicePage">
-<div class="row pageTitle">Services</div></section>
-<section id="services" class="row">
+<section id="pageCover" class="row productPage">
+<div class="row pageTitle">Products</div>
+</section>
+<section id="blogs" class="row">
 <div class="container">
 <div class="row">
-<div class="col-sm-9" style="width:100%">
+<div class="col-sm-9" style="width:100%;">
 <div class="row">
-<div class="row m0 whyUs">
-<div class="col-sm-12">
-<div class="row m0 whyUsInner">
-<div class="col-sm-7" style="width:100%;">
-<h3>Why Choose Aarushee <i class="fa fa-question"></i></h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give unbiased solution for solar system requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give customized solution based on requirements as well as budget.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e give you the best and customized deals based on your requirements.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e have brand associations with many multinational companies. They are the best in the industry.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e offer very good service backup all over the India to ensure good after sales service.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">W</b>e can take up projects all over India.
-</li>
+<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<!-- <div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 18 November 2014, 11:50 AM
+</div>-->
+<div class="row m0 featureImg">
+<a>
+<img src="images/blog/blog1.jpg" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a class="postTitle row m0"><h4>Faceted Search Has Landed</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<!--<a class="readMore">read more</a>-->
+</div>
+</div>
+</div>
+</div>
+<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<!--<div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 16 November 2014, 12:20 AM
+</div>-->
+<div class="row m0 featureImg">
+<a>
+<img src="images/blog/blog2.jpg" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a class="postTitle row m0"><h4>Vat and Global Marketplace</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<!--<a class="readMore">read more</a>-->
+</div>
+</div>
+</div>
+</div>
+<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<!-- <div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 14 November 2014, 10:50 AM
+</div>-->
+<div class="row m0 featureImg">
+<a>
+<img src="images/blog/blog3.jpg" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a class="postTitle row m0"><h4>Default withdrawal option</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<!--<a class="readMore">read more</a>-->
+</div>
+</div>
+</div>
+</div>
+<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<!-- <div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 18 November 2014, 11:50 AM
+</div>-->
+<div class="row m0 featureImg">
+<a>
+<img src="images/blog/blog4.jpg" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a class="postTitle row m0"><h4>Faceted Search Has Landed</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<!--<a class="readMore">read more</a>-->
+</div>
+</div>
+</div>
+</div>
+<!--<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 16 November 2014, 12:20 AM
+</div>
+<div class="row m0 featureImg">
+<a href="single-post.html">
+<img src="images/blog/blog2.png" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a href="single-post.html" class="postTitle row m0"><h4>Vat and Global Marketplace</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<a href="single-post.html" class="readMore">read more</a>
+</div>
+</div>
+</div>
+</div>-->
+<!--<div class="col-sm-6 blog">
+<div class="row m0 blogInner">
+<div class="row m0 blogDateTime">
+<i class="fa fa-calendar"></i> 14 November 2014, 10:50 AM
+</div>
+<div class="row m0 featureImg">
+<a href="single-post.html">
+<img src="images/blog/blog3.png" alt="Faceted Search Has Landed" class="img-responsive">
+</a>
+</div>
+<div class="row m0 postExcerpts">
+<div class="row m0 postExcerptInner">
+<a href="single-post.html" class="postTitle row m0"><h4>Default withdrawal option</h4></a>
+<p>This year in our 2014 roadmap one of our goals was to improve financial tooling for authors. A big part of that is the withdrawal cycle.</p>
+<a href="single-post.html" class="readMore">read more</a>
+</div>
+</div>
+</div>
+</div>-->
+</div>
+<div class="row paginationRow m0" style="visibility:hidden;margin-bottom:-40px;">
+<div class="paginationInner m0 row">
+<ul class="pagination fleft">
+<li class="active"><a href="#">1</a></li>
+<li><a href="#">2</a></li>
+<li><a href="#">3</a></li>
 </ul>
-</div>
-<div class="col-sm-5">
-<ul class="list-inline tagFeatures" style="display:none">
-<li><span class="badge"><i class="fa fa-check"></i></span> fuly responsive</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> semantic and clean html/css</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> woocommerce support</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> custom widgets</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> +600 google fonts</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> ajax contact form</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> layered psd's</li>
-<li><span class="badge"><i class="fa fa-check"></i></span> comming soon page</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="row m0 whatOffer">
-<div class="col-sm-12">
-<div class="row m0 whatOfferInner">
-<h3>What we offer</h3>
-<ul>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>ystem design and complete EPCM(Engineering, Procurement, Consultation & Management).
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">S</b>upply of all project related material.(such as PV modules, invertors, structures, etc.)
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">C</b>ivil activities which shall consists of module foundation and cable conduit construction.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">I</b>nstallation and commissioning of all electrical components.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">P</b>roject planning and controlling.
-</li>
-<li>
-<b style="font-size: x-large;color: #009100;">A</b>ll technical support and documentation required for statutory and regulatory approvals will be supported by Aarushee Solar Energy.
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="row m0">
-<div class="col-sm-12">
-<div class="row m0 serviceFeature">
-<div class="col-sm-4">
-<img src="images/monitor.jpg" alt="" class="monitor img-reponsive">
-</div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-area-chart"></i>
-</div>
-<div class="media-body">
-<h5>On-Site Consultation</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll help you to select the power system that suits your reuirements.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-book"></i>
-</div>
-<div class="media-body">
-<h5>Trusted Advice</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll advice you & submit necessary approval documentation on your behalf.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-clock-o"></i>
-</div>
-<div class="media-body">
-<h5>Quick Turn-Around</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>nce acquired necessary components, start enjoying your new Solar system.</p>
-</div>
-</div>
-</div>
-<div class="col-sm-4">
-<div class="media">
-<div class="media-left">
-<i class="fa fa-arrows-alt"></i>
-</div>
-<div class="media-body">
-<h5>Flexibility</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll access your electricity usage & see where you stand to gain the most benfit.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-briefcase"></i>
-</div>
-<div class="media-body">
-<h5>Budgeting</h5>
-<p><b style="font-size: x-large;color: #009100;">W</b>e'll taylor our recommendation to your wallet, without cutting service & quality.</p>
-</div>
-</div>
-<div class="media">
-<div class="media-left">
-<i class="fa fa-star"></i>
-</div>
-<div class="media-body">
-<h5>International Standards</h5>
-<p><b style="font-size: x-large;color: #009100;">O</b>ur Solar components meet German standards guarenteed for 25 years or more.</p>
-</div>
-</div>
-</div>
-</div>
-</div>
 </div>
 </div>
 </div>
@@ -281,7 +270,8 @@ Sun cares you, Solar saves you.
 <li role="presentation" class="active"><a href="#contactPhone" aria-controls="contactPhone" role="tab" data-toggle="tab"><i class="fa fa-phone"></i></a></li>
 <li role="presentation"><a href="#contactEmail" aria-controls="contactEmail" role="tab" data-toggle="tab"><i class="fa fa-envelope"></i></a></li>
 <li role="presentation"><a href="#contactHome" aria-controls="contactHome" role="tab" data-toggle="tab"><i class="fa fa-home"></i></a></li>
-</ul><div class="tab-content">
+</ul>
+<div class="tab-content">
 <div role="tabpanel" class="tab-pane active" id="contactPhone"><i class="fa fa-phone"></i> Call us at: +91 9987237302</div>
 <div role="tabpanel" class="tab-pane" id="contactEmail"><i class="fa fa-envelope"></i>Email us at: info@aarusheesolar.com</div>
 <div role="tabpanel" class="tab-pane" id="contactHome"><i class="fa fa-home"></i>Sadguru Apartment Fifth Floor Opposite Konark Heights Near Vegas Hotel Birla College Road, Patil Nagar, Kalyan West, Kalyan, Maharashtra 421301</div>
@@ -307,8 +297,10 @@ Sun cares you, Solar saves you.
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());gtag('config', 'UA-126263011-1');
-</script></body>
+gtag('js', new Date());
+gtag('config', 'UA-126263011-1');
+</script>
+</body>
 </html>
 <script>
 $(document).ready(function() {
